# gxui

./: .gitignore  CMakeLists.txt  README.md  convert_icons.py  library.json  requirements.txt
.github/workflows/: release.yml
example/: SamplePage.h
include/: EPDComponent.h  EPDController.h  EPDIcon.h  EPDInteractable.h  EPDMenu.h  EPDMenuConstants.h  EPDPage.h  EPDRenderManager.h  EPDRenderable.h
